[package]
name = "doomfire-pixels"
version = "0.1.0"
authors = ["Dries Cruyskens <dries.cruyskens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doomfire = { path = "../doomfire" }
pixels = "0.0.4"
wgpu = "0.5.0" # gpu interface
winit = "0.22.2" # window manager
clap = {version = "2.33", features = ["yaml"]}